Trabajo Parcial/FormasParser.py
# Generated from Formas.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FormasParser ( Parser ):

    grammarFileName = "Formas.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'repetir'", "'veces'", "'punto'", "'recta'", 
                     "'triangulo'", "'cuadrado'", "'pentagono'", "'circulo'", 
                     "'trasladar'", "'mostrar'", "'='", "'.'", "','", "'('", 
                     "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "REPETIR", "VECES", "PUNTO", "RECTA", 
                      "TRIANGULO", "CUADRADO", "PENTAGONO", "CIRCULO", "TRASLADAR", 
                      "MOSTRAR", "IGUAL", "DOT", "COMA", "LPAREN", "RPAREN", 
                      "MAS", "MENOS", "MULT", "DIV", "ID", "NUM", "WS" ]

    RULE_programa = 0
    RULE_instrucciones = 1
    RULE_instruccion = 2
    RULE_asignacion = 3
    RULE_repetir = 4
    RULE_punto = 5
    RULE_recta = 6
    RULE_triangulo = 7
    RULE_cuadrado = 8
    RULE_pentagono = 9
    RULE_circulo = 10
    RULE_trasladar = 11
    RULE_mostrar = 12
    RULE_expr = 13

    ruleNames =  [ "programa", "instrucciones", "instruccion", "asignacion", 
                   "repetir", "punto", "recta", "triangulo", "cuadrado", 
                   "pentagono", "circulo", "trasladar", "mostrar", "expr" ]

    EOF = Token.EOF
    REPETIR=1
    VECES=2
    PUNTO=3
    RECTA=4
    TRIANGULO=5
    CUADRADO=6
    PENTAGONO=7
    CIRCULO=8
    TRASLADAR=9
    MOSTRAR=10
    IGUAL=11
    DOT=12
    COMA=13
    LPAREN=14
    RPAREN=15
    MAS=16
    MENOS=17
    MULT=18
    DIV=19
    ID=20
    NUM=21
    WS=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instrucciones(self):
            return self.getTypedRuleContext(FormasParser.InstruccionesContext,0)


        def EOF(self):
            return self.getToken(FormasParser.EOF, 0)

        def getRuleIndex(self):
            return FormasParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = FormasParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.instrucciones()
            self.state = 29
            self.match(FormasParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(FormasParser.InstruccionContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_instrucciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstrucciones" ):
                listener.enterInstrucciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstrucciones" ):
                listener.exitInstrucciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = FormasParser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1050618) != 0):
                self.state = 31
                self.instruccion()
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(FormasParser.AsignacionContext,0)


        def punto(self):
            return self.getTypedRuleContext(FormasParser.PuntoContext,0)


        def recta(self):
            return self.getTypedRuleContext(FormasParser.RectaContext,0)


        def triangulo(self):
            return self.getTypedRuleContext(FormasParser.TrianguloContext,0)


        def cuadrado(self):
            return self.getTypedRuleContext(FormasParser.CuadradoContext,0)


        def pentagono(self):
            return self.getTypedRuleContext(FormasParser.PentagonoContext,0)


        def repetir(self):
            return self.getTypedRuleContext(FormasParser.RepetirContext,0)


        def trasladar(self):
            return self.getTypedRuleContext(FormasParser.TrasladarContext,0)


        def mostrar(self):
            return self.getTypedRuleContext(FormasParser.MostrarContext,0)


        def circulo(self):
            return self.getTypedRuleContext(FormasParser.CirculoContext,0)


        def getRuleIndex(self):
            return FormasParser.RULE_instruccion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruccion" ):
                listener.enterInstruccion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruccion" ):
                listener.exitInstruccion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccion" ):
                return visitor.visitInstruccion(self)
            else:
                return visitor.visitChildren(self)




    def instruccion(self):

        localctx = FormasParser.InstruccionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccion)
        try:
            self.state = 47
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.asignacion()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.punto()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 39
                self.recta()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 40
                self.triangulo()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self.cuadrado()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 42
                self.pentagono()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 7)
                self.state = 43
                self.repetir()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 44
                self.trasladar()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 9)
                self.state = 45
                self.mostrar()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 10)
                self.state = 46
                self.circulo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(FormasParser.ID, 0)

        def IGUAL(self):
            return self.getToken(FormasParser.IGUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(FormasParser.ExprContext,0)


        def getRuleIndex(self):
            return FormasParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = FormasParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(FormasParser.ID)
            self.state = 50
            self.match(FormasParser.IGUAL)
            self.state = 51
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepetirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPETIR(self):
            return self.getToken(FormasParser.REPETIR, 0)

        def expr(self):
            return self.getTypedRuleContext(FormasParser.ExprContext,0)


        def VECES(self):
            return self.getToken(FormasParser.VECES, 0)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def instruccion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.InstruccionContext)
            else:
                return self.getTypedRuleContext(FormasParser.InstruccionContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_repetir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepetir" ):
                listener.enterRepetir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepetir" ):
                listener.exitRepetir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRepetir" ):
                return visitor.visitRepetir(self)
            else:
                return visitor.visitChildren(self)




    def repetir(self):

        localctx = FormasParser.RepetirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_repetir)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(FormasParser.REPETIR)
            self.state = 54
            self.expr(0)
            self.state = 55
            self.match(FormasParser.VECES)
            self.state = 56
            self.match(FormasParser.LPAREN)
            self.state = 58 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 57
                self.instruccion()
                self.state = 60 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1050618) != 0)):
                    break

            self.state = 62
            self.match(FormasParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PuntoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUNTO(self):
            return self.getToken(FormasParser.PUNTO, 0)

        def ID(self):
            return self.getToken(FormasParser.ID, 0)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def COMA(self):
            return self.getToken(FormasParser.COMA, 0)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def getRuleIndex(self):
            return FormasParser.RULE_punto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPunto" ):
                listener.enterPunto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPunto" ):
                listener.exitPunto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPunto" ):
                return visitor.visitPunto(self)
            else:
                return visitor.visitChildren(self)




    def punto(self):

        localctx = FormasParser.PuntoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_punto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(FormasParser.PUNTO)
            self.state = 65
            self.match(FormasParser.ID)
            self.state = 66
            self.match(FormasParser.LPAREN)
            self.state = 67
            self.expr(0)
            self.state = 68
            self.match(FormasParser.COMA)
            self.state = 69
            self.expr(0)
            self.state = 70
            self.match(FormasParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RectaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RECTA(self):
            return self.getToken(FormasParser.RECTA, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.ID)
            else:
                return self.getToken(FormasParser.ID, i)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.COMA)
            else:
                return self.getToken(FormasParser.COMA, i)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_recta

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecta" ):
                listener.enterRecta(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecta" ):
                listener.exitRecta(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRecta" ):
                return visitor.visitRecta(self)
            else:
                return visitor.visitChildren(self)




    def recta(self):

        localctx = FormasParser.RectaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_recta)
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(FormasParser.RECTA)
                self.state = 73
                self.match(FormasParser.ID)
                self.state = 74
                self.match(FormasParser.LPAREN)
                self.state = 75
                self.match(FormasParser.ID)
                self.state = 76
                self.match(FormasParser.COMA)
                self.state = 77
                self.match(FormasParser.ID)
                self.state = 78
                self.match(FormasParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.match(FormasParser.RECTA)
                self.state = 80
                self.match(FormasParser.ID)
                self.state = 81
                self.match(FormasParser.LPAREN)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.match(FormasParser.COMA)
                self.state = 84
                self.expr(0)
                self.state = 85
                self.match(FormasParser.COMA)
                self.state = 86
                self.expr(0)
                self.state = 87
                self.match(FormasParser.COMA)
                self.state = 88
                self.expr(0)
                self.state = 89
                self.match(FormasParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TrianguloContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TRIANGULO(self):
            return self.getToken(FormasParser.TRIANGULO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.ID)
            else:
                return self.getToken(FormasParser.ID, i)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.COMA)
            else:
                return self.getToken(FormasParser.COMA, i)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_triangulo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriangulo" ):
                listener.enterTriangulo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriangulo" ):
                listener.exitTriangulo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTriangulo" ):
                return visitor.visitTriangulo(self)
            else:
                return visitor.visitChildren(self)




    def triangulo(self):

        localctx = FormasParser.TrianguloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_triangulo)
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 93
                self.match(FormasParser.TRIANGULO)
                self.state = 94
                self.match(FormasParser.ID)
                self.state = 95
                self.match(FormasParser.LPAREN)
                self.state = 96
                self.match(FormasParser.ID)
                self.state = 97
                self.match(FormasParser.COMA)
                self.state = 98
                self.match(FormasParser.ID)
                self.state = 99
                self.match(FormasParser.COMA)
                self.state = 100
                self.match(FormasParser.ID)
                self.state = 101
                self.match(FormasParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.match(FormasParser.TRIANGULO)
                self.state = 103
                self.match(FormasParser.ID)
                self.state = 104
                self.match(FormasParser.LPAREN)
                self.state = 105
                self.expr(0)
                self.state = 106
                self.match(FormasParser.COMA)
                self.state = 107
                self.expr(0)
                self.state = 108
                self.match(FormasParser.COMA)
                self.state = 109
                self.expr(0)
                self.state = 110
                self.match(FormasParser.COMA)
                self.state = 111
                self.expr(0)
                self.state = 112
                self.match(FormasParser.COMA)
                self.state = 113
                self.expr(0)
                self.state = 114
                self.match(FormasParser.COMA)
                self.state = 115
                self.expr(0)
                self.state = 116
                self.match(FormasParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuadradoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUADRADO(self):
            return self.getToken(FormasParser.CUADRADO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.ID)
            else:
                return self.getToken(FormasParser.ID, i)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.COMA)
            else:
                return self.getToken(FormasParser.COMA, i)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_cuadrado

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuadrado" ):
                listener.enterCuadrado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuadrado" ):
                listener.exitCuadrado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuadrado" ):
                return visitor.visitCuadrado(self)
            else:
                return visitor.visitChildren(self)




    def cuadrado(self):

        localctx = FormasParser.CuadradoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_cuadrado)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(FormasParser.CUADRADO)
                self.state = 121
                self.match(FormasParser.ID)
                self.state = 122
                self.match(FormasParser.LPAREN)
                self.state = 123
                self.match(FormasParser.ID)
                self.state = 124
                self.match(FormasParser.COMA)
                self.state = 125
                self.match(FormasParser.ID)
                self.state = 126
                self.match(FormasParser.COMA)
                self.state = 127
                self.match(FormasParser.ID)
                self.state = 128
                self.match(FormasParser.COMA)
                self.state = 129
                self.match(FormasParser.ID)
                self.state = 130
                self.match(FormasParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(FormasParser.CUADRADO)
                self.state = 132
                self.match(FormasParser.ID)
                self.state = 133
                self.match(FormasParser.LPAREN)
                self.state = 134
                self.expr(0)
                self.state = 135
                self.match(FormasParser.COMA)
                self.state = 136
                self.expr(0)
                self.state = 137
                self.match(FormasParser.COMA)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.match(FormasParser.COMA)
                self.state = 140
                self.expr(0)
                self.state = 141
                self.match(FormasParser.COMA)
                self.state = 142
                self.expr(0)
                self.state = 143
                self.match(FormasParser.COMA)
                self.state = 144
                self.expr(0)
                self.state = 145
                self.match(FormasParser.COMA)
                self.state = 146
                self.expr(0)
                self.state = 147
                self.match(FormasParser.COMA)
                self.state = 148
                self.expr(0)
                self.state = 149
                self.match(FormasParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PentagonoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PENTAGONO(self):
            return self.getToken(FormasParser.PENTAGONO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.ID)
            else:
                return self.getToken(FormasParser.ID, i)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.COMA)
            else:
                return self.getToken(FormasParser.COMA, i)

        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def getRuleIndex(self):
            return FormasParser.RULE_pentagono

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPentagono" ):
                listener.enterPentagono(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPentagono" ):
                listener.exitPentagono(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPentagono" ):
                return visitor.visitPentagono(self)
            else:
                return visitor.visitChildren(self)




    def pentagono(self):

        localctx = FormasParser.PentagonoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_pentagono)
        try:
            self.state = 190
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(FormasParser.PENTAGONO)
                self.state = 154
                self.match(FormasParser.ID)
                self.state = 155
                self.match(FormasParser.LPAREN)
                self.state = 156
                self.match(FormasParser.ID)
                self.state = 157
                self.match(FormasParser.COMA)
                self.state = 158
                self.match(FormasParser.ID)
                self.state = 159
                self.match(FormasParser.COMA)
                self.state = 160
                self.match(FormasParser.ID)
                self.state = 161
                self.match(FormasParser.COMA)
                self.state = 162
                self.match(FormasParser.ID)
                self.state = 163
                self.match(FormasParser.COMA)
                self.state = 164
                self.match(FormasParser.ID)
                self.state = 165
                self.match(FormasParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 166
                self.match(FormasParser.PENTAGONO)
                self.state = 167
                self.match(FormasParser.ID)
                self.state = 168
                self.match(FormasParser.LPAREN)
                self.state = 169
                self.expr(0)
                self.state = 170
                self.match(FormasParser.COMA)
                self.state = 171
                self.expr(0)
                self.state = 172
                self.match(FormasParser.COMA)
                self.state = 173
                self.expr(0)
                self.state = 174
                self.match(FormasParser.COMA)
                self.state = 175
                self.expr(0)
                self.state = 176
                self.match(FormasParser.COMA)
                self.state = 177
                self.expr(0)
                self.state = 178
                self.match(FormasParser.COMA)
                self.state = 179
                self.expr(0)
                self.state = 180
                self.match(FormasParser.COMA)
                self.state = 181
                self.expr(0)
                self.state = 182
                self.match(FormasParser.COMA)
                self.state = 183
                self.expr(0)
                self.state = 184
                self.match(FormasParser.COMA)
                self.state = 185
                self.expr(0)
                self.state = 186
                self.match(FormasParser.COMA)
                self.state = 187
                self.expr(0)
                self.state = 188
                self.match(FormasParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CirculoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CIRCULO(self):
            return self.getToken(FormasParser.CIRCULO, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(FormasParser.ID)
            else:
                return self.getToken(FormasParser.ID, i)

        def LPAREN(self):
            return self.getToken(FormasParser.LPAREN, 0)

        def COMA(self):
            return self.getToken(FormasParser.COMA, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FormasParser.ExprContext)
            else:
                return self.getTypedRuleContext(FormasParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(FormasParser.RPAREN, 0)

        def getRuleIndex(self):
            return FormasParser.RULE_circulo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCirculo" ):
                listener.enterCirculo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCirculo" ):
                listener.exitCirculo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCirculo" ):
                return visitor.visitCirculo(self)
            else:
                return visitor.visitChildren(self)




    def circulo(self):

        localctx = FormasParser.CirculoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_circulo)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.match(FormasParser.CIRCULO)
                self.state = 193
                self.match(FormasParser.ID)
                self.state = 194
                self.match(FormasParser.LPAREN)
                self.state = 195
                self.match(FormasParser.ID)
                self.state = 196
                self.match(FormasParser.COMA)
                self.state = 197
                self.expr(0)
                self.state = 198
                self.match(FormasParser.RPAREN)
                pass
